🐛 nav bar z-index fixed

--- a/src/components/common/navBarCommon/index.module.scss
+++ b/src/components/common/navBarCommon/index.module.scss
@@ -4,7 +4,7 @@
 .nav-bar {
   position: fixed;
   top: 0;
-  z-index: 100;
+  z-index: 1000;
   width: 100%;
   padding: 10px 0;
   font-size: 20px;
